LU-13426 mdd: correctly swap OIs during migration

While swapping layouts mdd_swap_layouts() swaps also OI(FID)
and uses lmm->lmm_oi directly in one place which is wrong if
corresponding layout is composite. Layout OI should be taken
by using mdd_get_lmm_oi() which handles all layout types
correctly.

Patch fixes that by using mdd_get_lmm_oi() instead of direct
access to lmm_oi field.

Signed-off-by: Mikhail Pershin <mpershin@whamcloud.com>
Change-Id: I6a7dc9ece3b272f75a5f206b32937cf9f674ead9
Reviewed-on: https://review.whamcloud.com/38172
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Jian Yu <yujian@whamcloud.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>